<resources>
    <string name="app_name">销售管家</string>
    <string name="login_phoneno">手机号码:</string>
    <string name="login_inputphoneno">请输入11位手机号码</string>
    <string name="login_password">登录密码:</string>
    <string name="login_inputpassword">请输入登录密码</string>
    <string name="login_remeberpassword">记住密码</string>
    <string name="login_autologin">自动登录</string>
    <string name="login_login">登&#160;&#160;&#160;&#160;录</string>
    <string name="login_cancel">取&#160;&#160;&#160;&#160;消</string>
    <string name="login_version">1.0.0</string>
    <string name="login_copyright">浙江融创信息产业有限公司</string>
    <string name="progress">奔跑中,请稍候~</string>
    <string name="main_home">首&#160;&#160;页</string>
    <string name="main_work">日&#160;&#160;常</string>
    <string name="main_plan">拜&#160;&#160;访</string>
    <string name="main_datasubmit">上&#160;&#160;报</string>
    <string name="main_more">更&#160;&#160;多</string>
    <string name="home_notice">新闻公告</string>
    <string name="home_mysuggestion">我的反馈</string>
    <string name="home_addsuggestion">信息反馈</string>
    <string name="home_mycustomer">我的网点</string>
    <string name="home_markcustomer">网点标注</string>
    <string name="home_addcustomer">新增网点</string>
    <string name="home_phonebook">通&#160;&#160;讯&#160;&#160;录</string>
    <string name="work_report">工作汇报</string>
    <string name="work_reportview">汇报详情</string>
    <string name="work_myreport">我的工作</string>
    <string name="work_report_search">汇报筛选</string>
    <string name="work_attence">考勤登记</string>
    <string name="work_myattence">考勤列表</string>
    <string name="work_travel">差旅申请</string>
    <string name="work_traveltrace">我的差旅</string>
    <string name="work_vacation">请假申请</string>
    <string name="work_myvacation">我的假期</string>
    <string name="plan_add">计划制定</string>
    <string name="plan_execute">我的计划</string>
    <string name="datasubmit_terminalproduct">进店品项</string>
    <string name="datasubmit_order">订货信息</string>
    <string name="datasubmit_myorder">我的订货</string>
    <string name="datasubmit_backorder">退货信息</string>
    <string name="datasubmit_mybackorder">我的退货</string>
    <string name="datasubmit_sale">销量信息</string>
    <string name="datasubmit_stock">库存信息</string>
    <string name="datasubmit_promotion">销售活动</string>
    <string name="datasubmit_contendpromotion">竞品活动</string>
    <string name="datasubmit_contendproduct">竞品信息</string>
    <string name="more_logout">注销</string>
    <string name="more_passwordmodify">密码修改</string>
    <string name="more_checkversion">版本检测</string>
    <string name="more_setting">参数设置</string>
    <string name="more_faq">常见问题</string>
    <string name="more_about">关于我们</string>
    <string name="btn_ok">确&#160;&#160;定</string>
    <string name="btn_account">结&#160;&#160;算</string>
    <string name="btn_cancel">返&#160;&#160;回</string>
    <string name="btn_select">选&#160;&#160;择</string>
    <string name="btn_location">使用定位位置</string>
    <string name="btn_click">使用点击位置</string>
    <string name="noticetitle_list">新闻公告列表</string>
    <string name="notice_search_label">标题</string>
    <string name="notice_search_hint">请输入公告标题关键字</string>
    <string name="noticetitle_detail">新闻公告详情</string>
    <string name="suggestiontitle_list">我的反馈</string>
    <string name="suggestion_search_label">标题</string>
    <string name="suggestion_search_hint">请输入反馈标题关键字</string>
    <string name="suggestion_btn_detail">反馈详情</string>
    <string name="suggestion_btn_modify">反馈修改</string>
    <string name="suggestion_btn_delete">删除反馈</string>
    <string name="suggestion_detail">反馈详情</string>
    <string name="suggestion_submit">新增反馈</string>
    <string name="suggestion_modify">修改反馈</string>
    <string name="suggestion_title">反馈标题：</string>
        <string name="suggestion_search">反馈筛选：</string>
    <string name="suggestion_date">反馈时间：</string>
    <string name="suggestion_type">反馈类型：</string>
    <string name="suggestion_content">反馈内容：</string>
    <string name="suggestion_signstate">处理状态：</string>
    <string name="suggestion_signuser">处理人员：</string>
    <string name="suggestion_signdate">处理时间：</string>
    <string name="suggestion_signresult">处理意见：</string>
    <string name="suggestion_signcontent">处理内容：</string>
    <string name="terminal_list">我的网点</string>
    <string name="terminallist_terminalcode">网点编号：</string>
    <string name="terminallist_terminalcodehint">请输入或点击按钮扫描...</string>
    <string name="terminallist_terminalname">网点名称：</string>
    <string name="terminallist_terminalnamehint">请输入关键字...</string>
    <string name="terminallist_search">查&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;询</string>
    <string name="terminal_btn_view">查看网点</string>
    <string name="terminal_btn_modify">修改网点</string>
    <string name="terminal_btn_delete">删除网点</string>
    <string name="terminaltitle_view">网点详情</string>
    <string name="terminaltitle_submit">新增网点</string>
    <string name="terminaltitle_modify">修改网点</string>
    <string name="terminal_code">网点编号：</string>
    <string name="terminal_name">网点名称：</string>
    <string name="terminal_area">所属区域：</string>
    <string name="terminal_type">网点类型：</string>
    <string name="terminal_address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址：</string>
    <string name="terminal_zip">邮&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;编：</string>
    <string name="terminal_longitude">经&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;度：</string>
    <string name="terminal_latitude">纬&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;度：</string>
    <string name="terminal_placesize">营业面积：</string>
    <string name="terminal_employeenum">人员规模：</string>
    <string name="terminal_salenum">年销售额：</string>
    <string name="terminal_phone">固定电话：</string>
    <string name="terminal_fax">传&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;真：</string>
    <string name="terminal_contactman">联&#160;&#160;系&#160;&#160;人：</string>
    <string name="terminal_contactpost">职&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;务：</string>
    <string name="terminal_contactphone">联系电话：</string>
    <string name="terminal_contactmobile">手机号码：</string>
    <string name="terminal_email">电子邮箱：</string>
    <string name="terminal_state">网点状态：</string>
    <string name="contact_list">通讯录</string>
    <string name="contact_search_label">姓名</string>
    <string name="contact_search_hint">请输入人员姓名关键字</string>
    <string name="contact_btn_call">拨打电话</string>
    <string name="contact_btn_sendsms">发送短信</string>
    <string name="workreport_list">我的工作汇报</string>
    <string name="workreport_submit">新增工作汇报</string>
    <string name="workreport_type">汇报类型：</string>
    <string name="workreport_title">汇报标题：</string>
    <string name="workreport_begindate">开始日期：</string>
    <string name="workreport_enddate">结束日期：</string>
    <string name="workreport_summary">本期总结：</string>
    <string name="workreport_plan">下期计划：</string>
    <string name="work_list">我的工作</string>
    <string name="workreport_submitdate">工作日期：</string>
    <string name="bt_workreport">新增工作</string>
    <string name="attence_submit">考勤登记</string>
    <string name="attence_view">考勤详情</string>
    <string name="attence_username">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="attence_time">考勤时间：</string>
    <string name="attence_latitude">经&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;度：</string>
    <string name="attence_longitude">纬&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;度：</string>
    <string name="attence_address">地址描述：</string>
    <string name="attence_signin">上班签到</string>
    <string name="attence_search">提交</string>
    <string name="attence_signout">下班签退</string>
    <string name="attence_type">考勤类型：</string>
    <string name="attence_date">考勤日期：</string>
    <string name="attence_search_title">考勤筛选</string>
    <string name="attence_result">考勤结果：</string>
    <string name="travel_user">员工姓名：</string>
    <string name="travel_submit">差旅申请</string>
        <string name="travel_detail">差旅详情</string>
    <string name="travel_modify">修改差旅申请</string>
    <string name="travel_view">差旅申请详情</string>
    <string name="travel_execution">执行差旅</string>
    <string name="travel_submit_detail">差旅审批详情</string>
    <string name="travel_province">目&#160;&#160;的&#160;&#160;地：</string>
    <string name="travel_city">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="travel_zone">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="travel_begindate">开始日期：</string>
    <string name="travel_enddate">结束日期：</string>
    <string name="travel_days">差旅天数：</string>
    <string name="travel_reason">差旅缘由：</string>
    <string name="travel_signstate">审批状态：</string>
    <string name="travel_signuser">审批人员：</string>
    <string name="travel_signdate">审批时间：</string>
    <string name="travel_signresult">审批意见：</string>
    <string name="travel_search">差旅筛选</string>
    <string name="travel_destination">选择目的地</string>
    <string name="travel_signcontent">审批内容：</string>
    <string name="travel_createdate">申请日期：</string>
    <string name="travel_list">我的差旅</string>
    <string name="travel_search_label">目的地</string>
    <string name="travel_search_hint">请输入目的地关键字</string>
    <string name="travel_btn_detail">申请详情</string>
    <string name="travel_btn_modify">修改申请</string>
    <string name="travel_btn_delete">删除申请</string>
    <string name="travel_btn_arrive">到达登记</string>
    <string name="travel_btn_leave">离开登记</string>
    <string name="travel_btn_viewarrive">到达详情</string>
    <string name="travel_btn_viewleave">离开详情</string>
    <string name="travel_btn_nottrace">无需登记</string>
    <string name="traveltrace_submit">差旅登记</string>
    <string name="traveltrace_username">姓&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;名：</string>
    <string name="traveltrace_city">目&#160;&#160;的&#160;&#160;地：</string>
    <string name="traveltrace_begindate">开始日期：</string>
    <string name="traveltrace_enddate">结束日期：</string>
    <string name="traveltrace_type">登记类型：</string>
    <string name="traveltrace_datetime">登记时间：</string>
    <string name="traveltrace_latitude">经&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;度：</string>
    <string name="traveltrace_longitude">纬&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;度：</string>
    <string name="traveltrace_address">地址描述：</string>
    <string name="vacation_submit">休假申请</string>
    <string name="vacation_search_title">休假筛选</string>
    <string name="vacation_view">休假详情</string>
    <string name="vacation_type">请假类型：</string>
    <string name="vacation_begindate">开始日期：</string>
    <string name="vacation_enddate">结束日期：</string>
    <string name="vacation_days">请假天数：</string>
    <string name="vacation_reason">请假缘由：</string>
    <string name="vacation_list">我的休假</string>
    <string name="productitem_brand">产品品牌</string>
    <string name="productitem_category">产品类别</string>
    <string name="productitem_product">产品名称</string>
    <string name="productitem_norm">产品规格</string>
    <string name="productitem_price">产品单价</string>
    <string name="productitem_num">数&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;量</string>
    <string name="productitem_totalprice">总&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;价</string>
    <string name="contendproduct_terminal">销售网点</string>
    <string name="contendproduct_name">竞品名称</string>
    <string name="contendproduct_brand">竞品品牌</string>
    <string name="contendproduct_norm">竞品规格</string>
    <string name="contendproduct_price">竞品价格</string>
    <string name="contendproduct_desc">竞品描述</string>
    <string name="contendproduct_photo">竞品照片</string>
    <string name="v2_dialog_alert_title">提示</string>
    <string name="v2_dialog_alert_msg">是否确定退出系统？</string>
    <string name="v2_dialog_alert_btn_positive">确定</string>
    <string name="v2_dialog_alert_btn_negative">取消</string>
</resources>