<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="309dp"
    android:layout_height="200dp"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_alertdialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/v2_dialog_alert_title"
        android:textColor="@color/v2_blue"
        android:textSize="@dimen/textSize_32pt" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/v2_blue" />

    <TextView
        android:id="@+id/tv_alertdialog_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/v2_dialog_alert_msg"
        android:textColor="@color/v2_gray_353535"
        android:textSize="@dimen/textSize_30pt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_alertdialog_positive"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:background="@drawable/v2_btn_works"
            android:text="@string/v2_dialog_alert_btn_positive"
            android:textColor="@color/v2_gray_555555"
            android:textSize="@dimen/textSize_30pt" />

        <Button
            android:id="@+id/btn_alertdialog_negative"
            android:layout_width="115dp"
            android:layout_height="35dp"
            android:layout_marginLeft="15dp"
            android:background="@drawable/v2_btn_works"
            android:text="@string/v2_dialog_alert_btn_negative"
            android:textColor="@color/v2_gray_555555"
            android:textSize="@dimen/textSize_30pt" />
    </LinearLayout>

</LinearLayout>