<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/v2_background">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:background="@color/v2_text_white">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:background="@color/v2_text_white"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/tv_product"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:drawableRight="@drawable/v2_down_arrow"
                android:gravity="center_vertical"
                android:hint="@string/productitem_product"
                android:textColor="@color/v2_text"
                android:textColorHint="@color/v2_text_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/v2_background"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

            <EditText
                android:id="@+id/et_brand"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/v2_text_white"
                android:editable="false"
                android:gravity="center_vertical"
                android:hint="@string/productitem_brand"
                android:maxLength="32"
                android:singleLine="true"
                android:textColor="@color/v2_text"
                android:textColorHint="@color/v2_text_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/v2_background"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

            <EditText
                android:id="@+id/et_category"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/v2_text_white"
                android:editable="false"
                android:gravity="center_vertical"
                android:hint="@string/productitem_category"
                android:maxLength="32"
                android:singleLine="true"
                android:textColor="@color/v2_text"
                android:textColorHint="@color/v2_text_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/v2_background"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

            <EditText
                android:id="@+id/et_norm"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/v2_text_white"
                android:editable="false"
                android:gravity="center_vertical"
                android:hint="@string/productitem_norm"
                android:maxLength="16"
                android:singleLine="true"
                android:textColor="@color/v2_text"
                android:textColorHint="@color/v2_text_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/v2_background"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

            <EditText
                android:id="@+id/et_price"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/v2_text_white"
                android:gravity="center_vertical"
                android:hint="@string/productitem_price"
                android:inputType="numberDecimal"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/v2_text"
                android:textColorHint="@color/v2_text_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/v2_background"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

            <EditText
                android:id="@+id/et_num"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/v2_text_white"
                android:gravity="center_vertical"
                android:hint="@string/productitem_num"
                android:inputType="number"
                android:maxLength="8"
                android:singleLine="true"
                android:textColor="@color/v2_text"
                android:textColorHint="@color/v2_text_grey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/v2_background"
                android:paddingLeft="3dp"
                android:paddingRight="3dp" />

            <EditText
                android:id="@+id/et_totalprice"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/v2_text_white"
                android:editable="false"
                android:gravity="center_vertical"
                android:hint="@string/productitem_totalprice"
                android:maxLength="10"
                android:singleLine="true"
                android:textColor="@color/v2_text"
                android:textColorHint="@color/v2_text_grey"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/v2_divider" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/v2_text_white"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="7dp">

            <Button
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/v2_button_normal"
                android:text="继续添加"
                android:textColor="@color/v2_button"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/v2_button_normal"
                android:text="完成"
                android:textColor="@color/v2_button"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>